# py-dash

./: app.py  pyproject.toml  requirements.txt
templates/: base.html  index.html
