[tool.poetry]
name = "py_dash"
version = "0.1.0"
description = "Project to test and learn how to use Dash."
authors = ["Leandro Gabriel <lassisg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.12.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
